Archive2/8d/67267999ceea61/output
main.cpp:10:17: error: redefinition of 'i' with a different type: 'std::string' (aka 'basic_string<char>') vs 'int'
    std::string i = "oups";
                ^
main.cpp:8:13: note: previous definition is here
  for (auto i : V)
            ^
1 error generated.
